# qa_guru_python_4_17_poetry

./: pyproject.toml
qa_guru_python_4_17_poetry/: pyproject.toml
